force-app/main/default/objects/Flight_Bookings__c/Flight_Bookings__c.object-meta.xml
<CustomObject>
    <label>Flight Bookings</label>
    <nameField>
        <displayFormat>FB-{000000}</displayFormat>
        <label>Booking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flights Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>