force-app/main/default/objects/Flight_Bookings__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Flights Bookings</relationshipLabel>
    <relationshipName>Flights_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>