force-app/main/default/objects/Flight_Bookings__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Flights Bookings</relationshipLabel>
    <relationshipName>Flights_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>