force-app/main/default/objects/Flight_Bookings__c/fields/Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date__c</fullName>
    <defaultValue>DATETIMEVALUE(TODAY())</defaultValue>
    <label>Departure Date</label>
    <type>DateTime</type>
</CustomField>