force-app/main/default/objects/Flight_Bookings__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <label>Destination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Madrid</fullName>
            </value>
            <value>
                <fullName>Bruselas</fullName>
            </value>
            <value>
                <fullName>Paris</fullName>
            </value>
            <value>
                <fullName>Chicago</fullName>
            </value>
            <value>
                <fullName>San Francisco</fullName>
            </value>
            <value>
                <fullName>Los Angeles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>