force-app/main/default/objects/Flight_Bookings__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <label>Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Madrid</fullName>
            </value>
            <value>
                <fullName>Bruselas</fullName>
            </value>
            <value>
                <fullName>Paris</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>