force-app/main/default/objects/Flight_Bookings__c/validationRules/DepartureDateNotInPast.validationRule-meta.xml
<ValidationRule>
    <fullName>DepartureDateNotInPast</fullName>
    <active>true</active>
    <description>La Departure Date no puede ser menor del día de hoy</description>
    <errorConditionFormula>DATEVALUE(Departure_Date__c) &lt; TODAY()</errorConditionFormula>
    <errorMessage>La fecha no puede estar en el pasado</errorMessage>
</ValidationRule>