force-app/main/default/objects/Flight_Bookings__c/validationRules/NonEqualsOriginDestination.validationRule-meta.xml
<ValidationRule>
    <fullName>NonEqualsOriginDestination</fullName>
    <active>true</active>
    <description>Origin and Destiantion can&apos;t be equals.</description>
    <errorConditionFormula>TEXT(Origin__c)  =  TEXT(Destination__c)</errorConditionFormula>
    <errorDisplayField>Origin__c</errorDisplayField>
    <errorMessage>Origin and destination can&apos;t be equals</errorMessage>
</ValidationRule>